--- a/structured-data-master/.all-contributorsrc
+++ b/structured-data-master/.all-contributorsrc
@@ -11,10 +11,10 @@
   "commitConvention": "none",
   "contributors": [
     {
-      "login": "MatheusR42",
+      "login": "jvcfarias",
       "name": "Matheus Araujo",
-      "avatar_url": "https://avatars0.githubusercontent.com/u/16908590?v=4",
-      "profile": "https://github.com/MatheusR42",
+      "avatar_url": "https://avatars.githubusercontent.com/jvcfarias",
+      "profile": "https://github.com/jvcfarias",
       "contributions": [
         "code"
       ]
