--- a/structured-data-master/.all-contributorsrc
+++ b/structured-data-master/.all-contributorsrc
@@ -12,7 +12,7 @@
   "contributors": [
     {
       "login": "jvcfarias",
-      "name": "Matheus Araujo",
+      "name": "João Victor Farias",
       "avatar_url": "https://avatars.githubusercontent.com/jvcfarias",
       "profile": "https://github.com/jvcfarias",
       "contributions": [
